# stoic-trace-cockpit

./: .coveragerc  .env.example  .gitignore  NEXT.md  README.md  manage.py  pytest.ini  release.py  requirements_dev.txt  setup-development-environment.py  setup.cfg  setup.py  stoic-deploy.toml
mysite/: settings.py
trace_cockpit/: admin.py  html.py  htmlutils.py  middleware.py  models.py  testutils.py  trace_to_json.py
trace_cockpit/migrations/: 0001_initial.py  0002_auto_20210728_1425.py  0002_traceconfig_is_active.py  0002_tracelog_skipped_modules.py  0003_auto_20210729_1954.py  0003_tracefilter_string.py  0004_traceconfig_max_event_count_per_module.py  0004_tracelog.py  0005_tracelog_http_method.py  0006_alter_traceconfig_max_event_count_per_module.py
trace_cockpit/tests/: test_html.py  test_models.py  test_trace_to_json.py
trace_cockpit_testsite/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
