[metadata]
name = django-trace-cockpit
version = 2021.07.01
description = Django Trace Cockpit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guettli/django-trace-cockpit
author = Thomas Guettler
author_email = guettliml.django-trace-cockpit@thomas-guettler.de
classifiers =
    Environment :: Web Environment
    Framework :: Django
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = trace_cockpit
install_requires = \
    pytest-django
    pytest-mock
    Django

