[metadata]
name = stoic-trace-cockpit
version = 2021.07.01
description = Stoic Trace Cockpit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guettli/stoic-trace-cockpit
author = Thomas Guettler
author_email = guettliml.stoic-trace-cockpit@thomas-guettler.de
classifiers =
    Environment :: Web Environment
    Framework :: Django
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8
include_package_data = true
packages = trace_cockpit

install_requires =
    django
    django-ordered-model

scripts =
    manage.py
    release.py
